fix New Deposit (Overview cards) to be responsive and add spacing between Fund Your Account and Recent Deposits (on 1024px and smaller)

--- a/src/themes/default/styles/component.form.css
+++ b/src/themes/default/styles/component.form.css
@@ -10,6 +10,10 @@
             @mixin type-scale $type-small, 1;
             font-weight: $type-weight-medium;
             /* margin-bottom: calc($unit / 2); */
+
+            & .btn {
+                float: right;
+            }
         }
     }
     
