--- a/src/themes/default/styles/tool.animation.css
+++ b/src/themes/default/styles/tool.animation.css
@@ -8,16 +8,14 @@
 	margin-right: calc($unit * 2);
 	animation: rotate 2s linear infinite;
 }
-
 /*
     animation for loading state on buttons
 */
 @keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-
-    to {
-        transform: rotate(-360deg);
-    }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
